--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     </dependencies>
 
     <build>
+        <finalName>spring-boot</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
