--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     </dependencies>
 
     <build>
+        <defaultGoal>compile</defaultGoal>
         <finalName>spring-boot</finalName>
         <plugins>
             <plugin>
